# DRF_Project

./: pyproject.toml  requirements.txt
config/: settings.py  urls.py
fixtures/: courses_lessons.json  payments.json  users.json
lms/: admin.py  apps.py  models.py  serializers.py  views.py
lms/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions_and_more.py
